added a learning test for Google HTTP Client

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.http-client:google-http-client:1.15.0-rc'
     testCompile 'junit:junit:4.+'
 }
 
